<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">iContacts</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="name">Name</string>
    <string name="note">Note</string>
    <string name="mobph">MobilePhone</string>
    <string name="telph">TelePhone</string>
    <string name="addr">Address</string>
    <string name="email">Email</string>
    <string name="firm">Firm</string>
    <string name="blog">Blog</string>
    <string name="ok">OK</string>
    <string name="back">Back</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
	<string name="cancel">CANCEL</string>
	<string name="showname">Contact Info</string>
	<string name="addname">Add Contact</string>
	<string name="editname">Edit Contact</string>
	
	
		
</resources>
